fix: overflow for low pc screens in empty direct message channel

--- a/src/app/components/direct-message/direct-message.component.scss
+++ b/src/app/components/direct-message/direct-message.component.scss
@@ -85,6 +85,8 @@
       flex-direction: column;
       margin-left: 45px;
       gap: 24px;
+      overflow-y: auto;
+      @include scrollbar();
 
       .direct-m-mem-header {
         width: 100%;
